--- a/index.html
+++ b/index.html
@@ -4,138 +4,156 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>Sprint Challenge - Home</title>
-
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="img/home-header.jpg" />
+	<link rel="styles" type="text/css" href="img/staff-cooks.jpg"/>
 	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-	<div>
-		<!-- header -->
-		<header>
-			<div>
-				BLOOMTECH BAR AND GRILL
+	<!-- header -->
+	<header>
+		<button><a href="index.html">
+				<h1>BLOOMTECH BAR AND GRILL</h1>
+			</a></button>
 
-				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
-			</div>
-		</header>
+		<!-- nav -->
+		<nav>
+			<div class="links">
+				<button><a href="menu.html">Menu</a></button>
+				<button><a href="#Reservations">Reservations</a></button>
+				<button><a href="#SpecialOffers">Special Offers</a></button>
+				<button><a href="#Contacts">Contact</a></button>
 
-		<!-- gallery section -->
-		<section class="gallery">
-			<div>
-				<h2>OUR FOOD</h2>
 
-				img/food-avocadotoast.jpg
-
-				img/food-burger.jpg
-
-				img/food-poutine.jpg
-
-				img/food-ribs.jpg
-
-				img/food-sandwich.jpg
-
-				img/food-sausage.jpg
-
-				img/food-steak.jpg
-
-				img/food-tacos.jpg
-
-				img/food-wings.jpg
-			</div>
-		</section>
-
-		<!-- spacer -->
-		<div class="spacer"></div>
-
-		<!-- about section -->
-		<section class="about">
-			<div class="about-container">
-				<h2>ABOUT US</h2>
-
-				<div id="cooks" class="pic">
-				</div>
-
-				<div class="text">
-					<h3>Good Food, Great People</h3>
-					<p>Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
-						tempor meatloaf pig sunt porchetta beef. Ad hamburger pig veniam, andouille exercitation cillum
-						eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta frankfurter sed, est t-bone
-						porchetta capicola id tri-tip cillum cow leberkas do minim. Sausage ea velit boudin laboris
-						dolore
-						short loin corned beef commodo jowl beef dolor tempor. Dolor culpa enim in meatloaf, ham mollit
-						shankle duis chicken dolore andouille do tenderloin qui.</p>
-				</div>
-
-				<div id="bartender" class="pic">
+				<div class="socials">
+					<button><i class="fa-brands fa-facebook"></i></button>
+					<button><i class="fa-brands fa-twitter"></i></button>
+					<button><i class="fa-brands fa-instagram"></i></button>
 				</div>
 			</div>
-		</section>
+		</nav>
+	</header>
 
-		<!-- spacer -->
-		<div class="spacer"></div>
 
-		<!-- contact section -->
-		<section class="contact">
-			<div class="contact-container">
-				<h2>CONTACT US</h2>
+	<!-- gallery section -->
+	<section class="gallery">
+		<div>
+			<h2>OUR FOOD</h2>
 
-				<div class="info">
-					<div class="address">
-						<h3>Address</h3>
+			<img src="img/food-avocadotoast.jpg" />
 
-						<address>
-							<p>100 Main St</p>
-							<p>San Francisco, CA</p>
-						</address>
+			<img src="img/food-burger.jpg" />
+
+			<img src="img/food-poutine.jpg" />
+
+			<img src="img/food-ribs.jpg" />
+
+			<img src="img/food-sandwich.jpg" />
+
+			<img src="img/food-sausage.jpg" />
+
+			<img src="img/food-steak.jpg" />
+
+			<img src="img/food-tacos.jpg" />
+
+			<img src="img/food-wings.jpg" />
+		</div>
+	</section>
+
+	<!-- spacer -->
+	<div class="spacer"></div>
+
+	<!-- about section -->
+	<section class="about">
+		<div class="about-container">
+			<h2>ABOUT US</h2>
+
+			<div id="cooks" class="pic">
+			</div>
+
+			<div class="text">
+				<h3>Good Food, Great People</h3>
+				<p>Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
+					tempor meatloaf pig sunt porchetta beef. Ad hamburger pig veniam, andouille exercitation cillum
+					eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta frankfurter sed, est t-bone
+					porchetta capicola id tri-tip cillum cow leberkas do minim. Sausage ea velit boudin laboris
+					dolore
+					short loin corned beef commodo jowl beef dolor tempor. Dolor culpa enim in meatloaf, ham mollit
+					shankle duis chicken dolore andouille do tenderloin qui.</p>
+			</div>
+
+			<div id="bartender" class="pic">
+			</div>
+		</div>
+	</section>
+
+	<!-- spacer -->
+	<div class="spacer"></div>
+
+	<!-- contact section -->
+	<section class="contact">
+		<div class="contact-container">
+			<h3>CONTACT US</h3>
+
+			<div class="info">
+				<div class="address">
+					<h3>Address</h3>
+
+					<address>
+						<p>100 Main St</p>
+						<p>San Francisco, CA</p>
+					</address>
+				</div>
+
+				<div class="hours">
+					<h3>Hours</h3>
+
+					<div>
+						<p>Sunday to Thursday:</p>
+						<p>12:00p - 12:00a</p>
+						<p>Friday and Saturday:</p>
+						<p>12:00p - 4:00a</p>
 					</div>
+				</div>
 
-					<div class="hours">
-						<h3>Hours</h3>
+				<div class="contacts">
+					<h3>Contacts</h3>
 
-						<div>
-							<p>Sunday to Thursday:</p>
-							<p>12:00p - 12:00a</p>
-							<p>Friday and Saturday:</p>
-							<p>12:00p - 4:00a</p>
-						</div>
-					</div>
-
-					<div class="contacts">
-						<h3>Contacts</h3>
-
-						<div>
-							<a id="phone" href="tel:999-999-9999">999-999-9999</a>
-							<a id="email" href="mailto:restaurant@bloomtech.com">restaurant@bloomtech.com</a>
-						</div>
+					<div>
+						<a id="phone" href="tel:999-999-9999">999-999-9999</a>
+						<a id="email" href="mailto:restaurant@bloomtech.com">restaurant@bloomtech.com</a>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<!-- spacer -->
-		<div class="spacer-sm"></div>
+	<!-- spacer -->
+	<div class="spacer-sm"></div>
 
-		<!-- footer -->
-		<footer>
-			<!-- email signup -->
+	<!-- footer -->
+	<footer>
+		<!-- email signup -->
+		<div class="footer-input">
 			Join our mailing list!
-			Sign Up
-			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
-			<!-- copyright -->
-			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
-		</footer>
-	</div>
+			<input type="email" placeholder="Email Address">
+			<button type="submit">Sign Up</button>
+		</div>
+		<!-- nav -->
+		<nav>
+			<button><a href="menu.html">Menu</a></button>
+			<button><a href="Reservations">Reservations</a></button>
+			<button><a href="SpecialOffers">Special Offers</a></button>
+			<button><a href="Contacts">Contact</a></button>
+		</nav>
+		<!-- copyright -->
+		<p>©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
+	</footer>
+
 </body>
 
 </html>
